config class created

--- a/conf/test.conf
+++ b/conf/test.conf
@@ -6,8 +6,8 @@ server {
     location / {
 				methods     GET POST DELETE;
 				root         /spool/www2;
-				autoindex    on;
-				cgi_extensions on;
+				index    index.html index.htm;
+				cgi_extensions .cgi .pl .py;
                 return		307		http://localhost:8000;
 	}
 	location /files {
