--- a/conf/duplicate_server.conf
+++ b/conf/duplicate_server.conf
@@ -21,7 +21,7 @@ server {
 }
 
 server {
-		listen        			0.0.0.0:8080;
+		listen        			localhost:8080;
 		server_name   			server2;
 		client_max_body_size    10m;
 		error_page  			404  /404.html;
