fixed issue with server dying when connection is killed before cgi ends

--- a/conf/directory.conf
+++ b/conf/directory.conf
@@ -5,7 +5,7 @@ server {
     location / {
                 methods     GET PUT POST;
                 root        ./wwwroot/;
-                cgi_extensions  .py .pl .py;
+                cgi_extensions  .sh .py .pl .py;
 				autoindex   on;
 	}
     location /search {
