--- a/conf/duplicate_server.conf
+++ b/conf/duplicate_server.conf
@@ -9,12 +9,8 @@ server {
 				root        /spool/www;
 				autoindex   on;
 		}
-
-		location /upload/subdir {
-				autoindex on;
-		}
-
 		location /files {
+				methods    GET POST DELETE;
 				root /tmp/upload;
 				autoindex on;
 		}
@@ -31,11 +27,8 @@ server {
 				root         /spool/www2;
 				autoindex    on;
 		}
-
-		location /upload {
-		}
-
 		location /files {
+				methods   GET POST DELETE;
 				root /tmp/upload;
 				autoindex	on;
 		}
