--- a/conf/test.conf
+++ b/conf/test.conf
@@ -1,17 +1,19 @@
 server {
-    listen                  192.169.0.1:8080;
+    listen                  localhost:8080;
     server_name             one.example.com  www.one.example.com;
     client_max_body_size    10m;
     error_page              404  /404.html;
     location / {
 				methods     GET POST DELETE;
-				root         /spool/www2;
-				index    index.html index.htm;
-				cgi_extensions .cgi .pl .py;
-                return		307		http://localhost:8000;
+				root         ./wwwroot;
+				add_cgi .sh /bin/sh;
+        		add_cgi .cgi ./;
+        		add_cgi .py /usr/bin/python3;
+				autoindex on;
 	}
 	location /files {
+				index    index.html index.htm;
 				root /tmp/upload;
-				autoindex on;
+                return		307		http://localhost:8000;
 	}
 }
