handle add_ext in config file and build mimetype parser

--- a/conf/test.conf
+++ b/conf/test.conf
@@ -3,6 +3,8 @@ server {
     server_name             one.example.com  www.one.example.com;
     client_max_body_size    10m;
     error_page              404  /404.html;
+	add_ext 				.tab text/plain;
+	add_ext 				.syx text/plain;
     location / {
 				methods     GET POST DELETE;
 				root         ./wwwroot;
@@ -12,6 +14,7 @@ server {
 				autoindex on;
 	}
 	location /files {
+				methods	 GET POST DELETE;
 				index    index.html index.htm;
 				root /tmp/upload;
                 return		307		http://localhost:8000;
