amend MimeType class

--- a/conf/test.conf
+++ b/conf/test.conf
@@ -4,7 +4,7 @@ server {
     client_max_body_size    10m;
     error_page              404  /404.html;
 	add_ext 				.tab text/plain;
-	add_ext 				.syx text/plain;
+	add_ext 				.syx application/octet-stream;
     location / {
 				methods     GET POST DELETE;
 				root         ./wwwroot;
