mimetype func, clean cgi

--- a/conf/test.conf
+++ b/conf/test.conf
@@ -5,6 +5,8 @@ server {
     error_page              404  /404.html;
 	add_ext 				.tab text/plain;
 	add_ext 				.syx application/octet-stream;
+	add_ext 				.html text/html;
+	add_ext					.png image/png;
     location / {
 				methods     GET POST DELETE;
 				root         ./wwwroot;
