fix make-test due to add_ext

--- a/test/multi_server.conf
+++ b/test/multi_server.conf
@@ -1,6 +1,7 @@
 server {
     listen 0.0.0.0:8080;
     server_name host1.com host1.org;
+    add_ext .htm text/html;
     location / {
         methods GET;
         root wwwroot/host1;
@@ -11,6 +12,7 @@ server {
 server {
     listen 0.0.0.0:8080;
     server_name host2.com host2.org;
+    add_ext .htm text/html;
     location / {
         methods GET;
         root wwwroot/host2;
@@ -21,6 +23,7 @@ server {
 server {
     listen 0.0.0.0:8081;
     server_name host3.com host3.org;
+    add_ext .htm text/html;
     location / {
         methods GET;
         root wwwroot/host3;
