--- a/test/post_delete.conf
+++ b/test/post_delete.conf
@@ -7,4 +7,11 @@ server {
         root wwwroot/upload;
         autoindex on;
     }
+
+    location /small {
+        client_max_body_size 10;
+        methods GET POST DELETE;
+        root wwwroot;
+        autoindex on;
+    }
 }
