--- a/test/conflict_port.conf
+++ b/test/conflict_port.conf
@@ -2,14 +2,17 @@ server {
     listen 0.0.0.0:8080;
     location / {
         root .;
+        autoindex on;
         methods GET;
     }
 }
 
 server {
     listen 127.0.0.1:8080;
+    server_name 127.0.0.1;
     location / {
-        root .;
+        root wwwroot;
+        autoindex on;
         methods GET;
     }
 }
