refactor cgi fork and signal

--- a/conf/webserv.conf
+++ b/conf/webserv.conf
@@ -18,6 +18,35 @@ server {
 				root /tmp/upload;
 				autoindex on;
 		}
+
+
+    add_ext .css	text/css";
+    add_ext .gif	image/gif";
+    add_ext .htm	text/html";
+    add_ext .html	text/html";
+    add_ext .ico	image/x-icon";
+    add_ext .jpeg	image/jpeg";
+    add_ext .jpg	image/jpeg";
+    add_ext .js		application/javascript";
+    add_ext .json	application/json";
+    add_ext .mp4	video/mp4";
+    add_ext .otf	font/otf";
+    add_ext .png	image/png";
+    add_ext .pdf	application/pdf";
+    add_ext .svg	image/svg+xml";
+    add_ext .swf	application/x-shockwave-flash";
+    add_ext .tar	application/x-tar";
+    add_ext .tif	image/tiff";
+    add_ext .tiff	image/tiff";
+    add_ext .ttf	font/ttf";
+    add_ext .weba	audio/webm";
+    add_ext .webm	video/webm";
+    add_ext .webp	image/webp";
+    add_ext .woff	font/woff";
+    add_ext .woff2	font/woff2";
+    add_ext .xml	application/xml";
+    add_ext .zip	application/zip";
+
 }
 
 server {
