--- a/conf/webserv.conf
+++ b/conf/webserv.conf
@@ -1,72 +1,51 @@
 server {
-		listen                  127.0.0.1:8080;
-		server_name             one.example.com  www.one.example.com;
-		client_max_body_size    10m;
-		error_page              404  /404.html;
+	listen                  0.0.0.0:8080;
+	client_max_body_size    10m;
+	error_page              404  /404.html;
 
-		location / {
-				methods     GET POST DELETE;
-				root        /spool/www;
-				autoindex   on;
-		}
+	location / {
+		methods     GET POST DELETE;
+		root        wwwroot;
+		index       index.html index.htm;
+	}
 
-		location /upload/subdir {
-				autoindex on;
-		}
-
-		location /files {
-				root /tmp/upload;
-				autoindex on;
-		}
-
-
-    add_ext .css	text/css";
-    add_ext .gif	image/gif";
-    add_ext .htm	text/html";
-    add_ext .html	text/html";
-    add_ext .ico	image/x-icon";
-    add_ext .jpeg	image/jpeg";
-    add_ext .jpg	image/jpeg";
-    add_ext .js		application/javascript";
-    add_ext .json	application/json";
-    add_ext .mp4	video/mp4";
-    add_ext .otf	font/otf";
-    add_ext .png	image/png";
-    add_ext .pdf	application/pdf";
-    add_ext .svg	image/svg+xml";
-    add_ext .swf	application/x-shockwave-flash";
-    add_ext .tar	application/x-tar";
-    add_ext .tif	image/tiff";
-    add_ext .tiff	image/tiff";
-    add_ext .ttf	font/ttf";
-    add_ext .weba	audio/webm";
-    add_ext .webm	video/webm";
-    add_ext .webp	image/webp";
-    add_ext .woff	font/woff";
-    add_ext .woff2	font/woff2";
-    add_ext .xml	application/xml";
-    add_ext .zip	application/zip";
-
+    add_ext .css    text/css;
+    add_ext .gif    image/gif;
+    add_ext .htm    text/html;
+    add_ext .html   text/html;
+    add_ext .ico    image/x-icon;
+    add_ext .jpeg   image/jpeg;
+    add_ext .jpg    image/jpeg;
+    add_ext .js	    application/javascript;
+    add_ext .json   application/json;
+    add_ext .mp4    video/mp4;
+    add_ext .otf    font/otf;
+    add_ext .png    image/png;
+    add_ext .pdf    application/pdf;
+    add_ext .svg    image/svg+xml;
+    add_ext .swf    application/x-shockwave-flash;
+    add_ext .tar    application/x-tar;
+    add_ext .tif    image/tiff;
+    add_ext .tiff   image/tiff;
+    add_ext .ttf    font/ttf;
+    add_ext .weba   audio/webm;
+    add_ext .webm   video/webm;
+    add_ext .webp   image/webp;
+    add_ext .woff   font/woff;
+    add_ext .woff2  font/woff2;
+    add_ext .xml    application/xml;
+    add_ext .zip    application/zip;
 }
 
 server {
-		listen        			0.0.0.0:8080;
-		server_name   			server2;
-		client_max_body_size    10m;
-		error_page  			404  /404.html;
+    listen        			127.0.0.1:8080;
+    server_name   			127.0.0.1;
+    client_max_body_size    10m;
+    error_page  			404  /404.html;
 
-		location / {
-				methods     GET POST DELETE;
-				root         /spool/www2;
-				autoindex    on;
-				cgi_extensions on;
-		}
-
-		location /upload {
-		}
-
-		location /files {
-				root /tmp/upload;
-				autoindex	on;
-		}
+    location / {
+        methods     GET POST DELETE;
+        root         wwwroot;
+        autoindex    on;
+    }
 }
