--- a/conf/webserv.conf
+++ b/conf/webserv.conf
@@ -1,17 +1,21 @@
 server {
 	listen                  0.0.0.0:8080;
-	client_max_body_size    10m;
-	error_page              404  /404.html;
+	client_max_body_size    1m;
+	error_page              404  error_pages/404.html;
 
 	location / {
 		methods     GET POST DELETE;
 		root        wwwroot;
-		index       index.html index.htm;
+		index       indexx.html index.htm;
         autoindex    on;
+        add_cgi     .sh /bin/sh;
+        add_cgi     .py /usr/bin/python3;
+        add_cgi     .cgi ./;
 	}
 
     add_ext .css    text/css;
     add_ext .gif    image/gif;
+    add_ext .txt    text/plain;
     add_ext .htm    text/html;
     add_ext .html   text/html;
     add_ext .ico    image/x-icon;
@@ -36,4 +40,18 @@ server {
     add_ext .woff2  font/woff2;
     add_ext .xml    application/xml;
     add_ext .zip    application/zip;
+}
+
+server {
+	listen                  0.0.0.0:8080;
+    server_name             localhost;
+	client_max_body_size    1000;
+
+	location / {
+		methods     GET POST DELETE;
+		root        wwwroot;
+		index       indexx.html index.htm;
+        autoindex    on;
+        add_cgi     .sh /bin/sh;
+	}
 }
