--- a/test/method.conf
+++ b/test/method.conf
@@ -1,22 +1,22 @@
 server {
     listen 0.0.0.0:8080;
     location /get {
-        root wwwroot/cookie/cookie.sh;
+        root wwwroot/cgi/cookie.sh;
         methods GET;
-        add_cgi .sh ./;
+        add_cgi .sh /bin/sh;
     }
     location /post {
-        root wwwroot/cookie/cookie.sh;
+        root wwwroot/cgi/cookie.sh;
         methods POST;
         add_cgi .sh ./;
     }
     location /put {
-        root wwwroot/cookie/cookie.sh;
+        root wwwroot/cgi/cookie.sh;
         methods PUT;
         add_cgi .sh ./;
     }
     location /delete {
-        root wwwroot/cookie/cookie.sh;
+        root wwwroot/cgi/cookie.sh;
         methods DELETE;
         add_cgi .sh ./;
     }
