add ruby, perl, php samples

--- a/conf/webserv.conf
+++ b/conf/webserv.conf
@@ -10,6 +10,9 @@ server {
         autoindex    on;
         add_cgi     .sh /bin/sh;
         add_cgi     .py /usr/bin/python3;
+        add_cgi     .php /usr/bin/php;
+        add_cgi     .pl /usr/bin/perl;
+        add_cgi     .rb /usr/bin/ruby;
         add_cgi     .cgi ./;
 	}
 
